# multi-ud-incast

./: .clang-tidy  CMakeLists.txt  FastMemcpy.h  README.md  clientdevrun.sh  common.h  get_clock.cc  get_clock.h  mui_client.cc  mui_server.cc  rdma.cc  rdma.h  serverdevrun.sh
scripts/: clientdevrun.sh  devbuild.sh  mpi_host  perfserverrun.sh  serverdevrun.sh
